# Meta-Harness

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_SECTION_1.md  LICENSE  README.md  pyproject.toml  relay_metaharness_v7.md  relay_v7_appendix_b_metaharness_internals.md  relay_v7_appendix_c_inner_loop.md
agents/: __init__.py  baseline.py
backend/: conftest.py  pyproject.toml
backend/app/: __init__.py  cli.py  main.py  streaming.py
backend/app/api/: __init__.py  branches.py  checkpoints.py  events.py  forks.py  memory.py  runs.py
backend/app/meta_harness/: __init__.py  branches.py  frontier.py  harness.py  inner.py  memory.py  outer.py  persistence.py  proposer.py  runs.py  sandbox.py  state.py  tools.py
backend/tests/: test_api.py  test_branches.py  test_cli.py  test_frontier.py  test_inner.py  test_memory.py  test_memory_e2e.py  test_outer.py  test_persistence.py  test_proposer.py  test_sandbox.py  test_sdk.py  test_state.py  test_streaming.py  test_tools.py
docs/: BUILD_ORDER.md  DEFINITION_OF_DONE.md  IMPLEMENTATION_CLARITY.md  INTERFACES.md  PROJECT_KNOWLEDGE_BASE.md  PROJECT_LAYOUT.md  PROJECT_STATUS.md  STEP_9_HANDOFF.md  TEAM_HANDOFF.md
eval/: __init__.py  score.py
eval/holdout/task-006-fix-recursion/: task.json
eval/holdout/task-007-implement-stack/: task.json
frontend/: DESIGN.md  mockup.html  stitch_mcp.md
frontend/dashboard/: package-lock.json  package.json  playwright.config.ts
infra/: docker-compose.yml
md_notes/: EXENTION_WORKTREE.md  HACKATHON_PLAN.md  METAPHOR.md  PROPOSED.MD  USE_CASE.md
scripts/: demo_dryrun.sh  smoke_api.py
sdk/: pyproject.toml
sdk/meta_harness/: __init__.py  trace.py  types.py  wrap_graph.py
skills/meta-harness-coding-agent/: SKILL.md
(+50 files in other folders)
