[project]
name = "meta_harness_backend"
version = "0.1.0"
description = "Meta-Harness backend (FastAPI + LangGraph orchestration + meta-harness CLI)"
requires-python = ">=3.11"
dependencies = [
    "meta_harness",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.15",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
meta-harness = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
meta_harness = { workspace = true }
