[project]
name = "meta_harness"
version = "0.1.0"
description = "Meta-Harness public Python library (wrap_graph, @trace_run)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meta_harness"]
